--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,5 +6,11 @@ pipeline {
                 echo "Hello, Maven"
             }
         }
+        stage('Checkout') {
+            steps {
+                git 'https://github.com/jenkinsci/git-plugin'
+                sh 'ls -latrh'
+            }
+        }
     }
 }
