--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,7 @@ pipeline {
         stage('Docker build') {
             steps {
                 sh 'docker build --tag python-docker .'
-                sh 'cd airbus-project'
+                sh 'docker run -d -p 5000:5000 python-docker'
             }
         }
     }
