--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,8 +9,8 @@ pipeline {
         }
         stage('Docker build') {
             steps {
-                sh 'docker build --tag python-docker .'
-                sh 'docker run -d -p 5000:5000 python-docker'
+                sh 'sudo docker build --tag python-docker .'
+                sh 'sudo docker run -d -p 5000:5000 python-docker'
             }
         }
     }
