--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,16 +1,18 @@
 pipeline {
  agent any
   stages {
-        stage('Checkout') {
-            steps {
-               // sh 'git clone https://github.com/sachinshaji/airbus-project.git'
-                sh 'ls -latr'
-            }
-        }
+        //All the needed code is present in the repository.
+        //Choosen freestyle project as it has simple branching strategy and by default your code is present in the pwd
         stage('Docker build') {
             steps {
+                // building docker image from the Dockerfile what we have in the repository
                 sh 'docker build --tag python-docker .'
-                sh 'docker run -d -p 5000:5000 python-docker'
+            }
+        }
+        stage('Docker run and test the output') {
+            steps {
+                sh 'docker run -d -p 5000:5000 -name airbus-container python-docker'
+                sh 'curl -i $(hostname -i):5000'
             }
         }
     }
