--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
         }
         stage('Docker run and test the output') {
             steps {
-                sh 'docker run -d -p 5000:5000 -name airbus-container python-docker'
+                sh 'docker run -d -p 5000:5000 --name airbus-container python-docker'
                 sh 'curl -i $(hostname -i):5000'
             }
         }
