--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ pipeline {
                 //sh 'docker stop airbus-container && docker rm airbus-container'
                 //emailing the result
                 emailext body: "${currentBuild.currentResult}: Job ${env.JOB_NAME} build ${env.BUILD_NUMBER}\n More info at: ${env.BUILD_URL}",
-                recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']],
+                recipientProviders: [[$class: 'RequesterRecipientProvider']],
                 subject: "Jenkins Build ${currentBuild.currentResult}: Job ${env.JOB_NAME}"
             }
         }
